--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>ชื่อของคุณ</h1>
+            <h1>คนโหดๆตึงๆเท่ๆ</h1>
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
@@ -22,25 +22,25 @@
 
     <section id="about" class="container">
         <h2>About Me</h2>
-        <p>แนะนำตัวเองสั้นๆ</p>
+        <p>โย่ โย่</p>
     </section>
 
     <section id="projects" class="container">
         <h2>Projects</h2>
         <div class="project">
             <h3>Project 1</h3>
-            <p>รายละเอียดของโปรเจคที่ 1</p>
+            <p>เอาไว้กินข้าว 1</p>
         </div>
         <div class="project">
             <h3>Project 2</h3>
-            <p>รายละเอียดของโปรเจคที่ 2</p>
+            <p>เพื่อไก่ย่างหาดใหญ่</p>
         </div>
         <!-- เพิ่มโปรเจคเพิ่มเติมได้ที่นี่ -->
     </section>
 
     <section id="contact" class="container">
         <h2>Contact</h2>
-        <p>วิธีการติดต่อคุณ</p>
+        <p>ไม่ให้</p>
     </section>
 
     <footer>
